--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 15
     outputs:
-      hosting: ${{ steps.filter.outputs.hosting }}
+      frontend: ${{ steps.filter.outputs.frontend }}
     steps:
       # ソースコードをチェックアウト
       - name: Check out repository
@@ -24,15 +24,15 @@ jobs:
         id: filter
         with:
           filters: |
-            hosting:
-              - 'hosting/**'
+            src:
+              - 'frontend/src/**'
 
   # Firebase Hosting にデプロイ
   deploy_hosting:
     name: Deploy Hosting
     needs:
       - changes
-    if: ${{ needs.changes.outputs.hosting == 'true' }}
+    if: ${{ needs.changes.outputs.frontend == 'true' }}
     runs-on: ubuntu-latest
     permissions:
       id-token: write
