--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -72,5 +72,5 @@ jobs:
 
       # Firebase Hosting にデプロイ
       - name: Deploy to Hosting
-        run: firebase deploy --only hosting --project=${{ secrets.PROJECT_ID }}
+        run: firebase deploy --only hosting
         working-directory: ./frontend
