--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - t2/cd
+      - main
 
 jobs:
   changes:
@@ -14,11 +14,9 @@ jobs:
     outputs:
       frontend: ${{ steps.filter.outputs.frontend }}
     steps:
-      # ソースコードをチェックアウト
       - name: Check out repository
         uses: actions/checkout@v2
 
-      # Firebase のどのサービスに変更が加えられるかをチェックする
       - name: Detect changes
         uses: dorny/paths-filter@v2
         id: filter
@@ -27,7 +25,6 @@ jobs:
             frontend:
               - 'frontend/src/**'
 
-  # Firebase Hosting にデプロイ
   deploy_hosting:
     name: Deploy Hosting
     needs:
@@ -41,25 +38,20 @@ jobs:
       run:
         working-directory: ./frontend
     steps:
-      # ソースコードをチェックアウト
       - name: Check out repository
         uses: actions/checkout@v2
 
-      # Node.js のセットアップ
       - name: Setup Node.js
         uses: actions/setup-node@v3.1.1
         with:
           node-version: 22
 
-      # 依存関係のインストール
       - name: Install dependencies
         run: npm install
 
-      # Firebase CLI のインストール
       - name: Install Firebase Tools
         run: npm install -g firebase-tools
 
-      # 認証
       - name: "Authenticate to Google Cloud"
         uses: "google-github-actions/auth@v1"
         with:
@@ -67,10 +59,8 @@ jobs:
           service_account: ${{ secrets.SERVICE_ACCOUNT_FOR_HOSTING }}
           create_credentials_file: true
 
-      # ビルド
       - name: Build
         run: npm run build
 
-      # Firebase Hosting にデプロイ
       - name: Deploy to Hosting
         run: firebase deploy --only hosting
