--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -104,17 +104,14 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t LOCATION-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/REPOSITORY_NAME/IMAGE_NAME:$GITHUB_SHA ./backend
+          docker build -t asia-northeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/web-tech-dojo-backend/cloud-run-image:$GITHUB_SHA
 
       - name: Push Docker Image to Artifact Registry
         run: |
           docker push LOCATION-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/REPOSITORY_NAME/IMAGE_NAME:$GITHUB_SHA
 
-      - name: Deploy to Cloud R
-      un
-        run: |
-          gcloud run deploy SERVICE_NAME \
-            --image LOCATION-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/REPOSITORY_NAME/IMAGE_NAME:$GITHUB_SHA \
-            --region REGION \
-            --platform managed \
-            --allow-unauthenticated
+      - id: 'deploy'
+        uses: 'google-github-actions/deploy-cloudrun@v2'
+        with: 
+          service: 'web-tech-dojo-backend'
+          image: 'asia-northeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/web-tech-dojo-backend/cloud-run-image:$GITHUB_SHA'
