--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -112,3 +112,4 @@ jobs:
         with: 
           service: 'web-tech-dojo-backend'
           image: 'asia-northeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/web-tech-dojo-backend/cloud-run-image:$GITHUB_SHA'
+          region: 'asia-northeast1'
