--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -111,5 +111,5 @@ jobs:
         uses: 'google-github-actions/deploy-cloudrun@v2'
         with: 
           service: 'web-tech-dojo-backend'
-          image: 'asia-northeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/web-tech-dojo-backend/cloud-run-image:$GITHUB_SHA'
+          image: 'asia-northeast1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/web-tech-dojo-backend/cloud-run-image'
           region: 'asia-northeast1'
