--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.3"
+    "react-router": "^7.1.3",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
