--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,12 +59,10 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "git add ."
+      "eslint --fix"
     ],
     "*.{js,jsx,ts,tsx,css,html,md,json,cjs}": [
-      "prettier --write",
-      "git add ."
+      "prettier --write"
     ]
   }
 }
