--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,9 +60,10 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix",
+      "prettier --write",
       "git add"
     ],
-    "*.{js,jsx,ts,tsx,css,html,md,json,cjs}": [
+    "*.{css,html,md,json,cjs}": [
       "prettier --write",
       "git add"
     ]
