--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,7 +55,8 @@
   "prettier": {
     "semi": false,
     "singleQuote": true,
-    "tabWidth": 2
+    "tabWidth": 2,
+    "bracketSameLine": true
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
