--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -65,7 +65,7 @@ jobs:
           create_credentials_file: true
 
       - name: Decode Firebase Secrets
-        run: echo ${{ secrets.FRONTEND_FIREBASE_SECRETS }} | base64 -d > ./.env
+        run: echo ${{ secrets.FRONTEND_FIREBASE_SECRETS }} | base64 -d > .env
         env:
           FRONTEND_FIREBASE_SECRETS: ${{ secrets.FRONTEND_FIREBASE_SECRETS }}
       - name: Build
